--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Adivinhe o número!</title>
   </head>
   <body>
@@ -27,6 +27,6 @@
         </p>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="assets/index.js"></script>
   </body>
 </html>
